@@ -99,11 +99,11 @@
 </td>
 <td class=cellinside><br /> The function performs a SAR CW-OSL analysis on an<br /> RLum.Analysis  object including growth curve fitting.<br />
 </td>
-<td class=cellinside>0.5.3
+<td class=cellinside>0.5.5
 </td>
-<td class=cellinside>2015-07-23
+<td class=cellinside>2015-08-10
 </td>
-<td class=cellinside>17:09:29
+<td class=cellinside>22:36:39
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1270,7 +1270,7 @@
 </td>
 <td class=cellinside>2015-08-10
 </td>
-<td class=cellinside>21:42:13
+<td class=cellinside>22:04:05
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
