@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Mon Aug 10 21:44:28 2015
+% Mon Aug 10 22:44:24 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -10,7 +10,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.1.4 & 2015-08-10 & 01:01:45
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.5.3 & 2015-07-23 & 17:09:29
+  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.5.5 & 2015-08-10 & 22:36:39
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   4 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.16 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg$<$br /$>$ (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -123,7 +123,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   64 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.1 & 2015-04-30 & 12:01:13
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  65 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt produced by a Daybreak reader into R$<$br /$>$ & 0.1.0 & 2015-08-10 & 21:42:13
+  65 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt produced by a Daybreak reader into R$<$br /$>$ & 0.1.0 & 2015-08-10 & 22:04:05
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   66 & readBIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.9.1 & 2015-08-10 & 01:01:44
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
